--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -181,7 +181,7 @@
           }
         });
 
-        function UpdateHold () {
+        function udapteHold () {
           if (altHold) {
             $("#alt-hold-indicator").addClass("on");
             $("#alt-hold-indicator").removeClass("off");
@@ -900,8 +900,8 @@
               <div class="avua off" id="ctrl-hold-indicator"></div>
               <div class="key--bottom-left">Ctrl</div>
             </div>
-            <div class="key--bottom key--word key" data-key="-leftmeta">
-                <div>
+            <div class="key--bottom key--bottom-leftkey--word key" data-key="-leftmeta">
+                <div class="key--bottom-left">
                     <div style="display: flex;">
                         <div class="square">&nbsp;</div>
                         <div class="square">&nbsp;</div>
@@ -924,7 +924,7 @@
               <div class="key--bottom-left">Alt</div>
             </div>
             <div class="key--bottom key--word key--w1 key" data-key="-app">
-              <div>
+              <div  class="key--bottom-left">
                 <div class="box">&nbsp;</div>
                 <div class="box">&nbsp;</div>
                 <div class="box">&nbsp;</div>
