--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -314,7 +314,7 @@
         border: 1px solid black;
 	      border-radius: 5px;
         width: calc(100% - 20px);
-        height: 300px;
+        height: 305px;
       }
       .flex {
         display: flex;
@@ -339,6 +339,7 @@
         text-align: center;
         font-size: 14px;
         font-family: sans-serif;
+        margin-bottom: 15px;
       }
 
       .keyboard__row {
