--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -798,7 +798,7 @@
         </div>
         <div class="keyboard__row">
             <div class="key--bottom key--word key--w5 key" data-key="-capslock">
-            <span>CapsLk</span>
+              <div class="key--bottom-left">CapsLk</div>
             </div>
             <div class="key--letter key" data-key="-a">A</div>
             <div class="key--letter key" data-key="-s">S</div>
