--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -565,30 +565,18 @@
   </head>
   <body>
 	      <div class="flex between">
-          <div>
-            <div class="flex center">
-              <div id="showkeyboard" class="button flex center">
-                Keyboard
-              </div>
-            </div>
- 	          <div class="flex">
-              <div id="kstart" class="button flex center">START</div>
-              <div id="kstop" class="button flex center">STOP</div>
-            </div>
+          <div class="flex">
+            <div id="kstart" class="button flex center">Start</div>
+            <div id="showkeyboard" class="button flex center">Keyboard</div>
+            <div id="kstop" class="button flex center">Stop</div>
           </div>
           <div class="flex center">
-            <h2>Trabalhator 3.0</h2>
+            <h2>Trabalhator 3.5</h2>
           </div>
-          <div>
-            <div class="flex center">
-              <div id="showmouse" class="button flex center">
-                Mouse
-              </div>
-            </div>
-	          <div class="flex">
-              <div id="mstart" class="button flex center">START</div>
-              <div id="mstop" class="button flex center">STOP</div>
-            </div>
+          <div class="flex">
+            <div id="mstart" class="button flex center">Start</div>
+            <div id="showmouse" class="button flex center">Mouse</div>
+            <div id="mstop" class="button flex center">Stop</div>
           </div>
         </div>
         <div>
