--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -10,7 +10,6 @@
         var keyboard = null;
         var type = null;
         var move = null;
-        var log_count = 0;
         function callAjax(url) {
           $.ajax({ url: url, success: function( result ) {
             var t = new Date();
@@ -32,7 +31,6 @@
                 content += "<div style='width: 75px;'>Size: " + result.keyboard.size + "</div>";
                 content += "<div style='width: calc(100% - 375px);' class='text overflow'>Text: " + result.keyboard.text + "</div>";
                 content += "</div>";
-                log_count++;
               }
             }
             if (typeof result.mouse != "undefined") {
@@ -46,7 +44,6 @@
                 content += "<div style='width: 75px;'>X: " + result.mouse.x + "</div>";
                 content += "<div style='width: 75px;'>Y: " + result.mouse.y + "</div>";
 		            content += "</div>";
-                log_count++;
               }
             }
             if (typeof result.type != "undefined") {
@@ -75,7 +72,6 @@
                 var t = result.type.keys.replaceAll("left", "").replaceAll("right", "").replaceAll("kp", "").replaceAll("-", "");
                 content += "<div style='width: calc(100% - 300px);'>Keys: " + t + "</div>";
 		            content += "</div>";
-                log_count++;
               }
             }
             if (typeof result.move != "undefined") {
@@ -90,13 +86,12 @@
                 content += "<div style='width: 75px;'>X: " + result.move.x + "</div>";
                 content += "<div style='width: 75px;'>Y: " + result.move.y + "</div>";
 		            content += "</div>";
-                log_count++;
               }
             }
             if (content !== "") {
-              if (log_count > 20) {
-                var list = document.getElementById("result"); 
-                list.removeChild(list.childNodes[list.size - 1]);  
+              var list = $("#result").children(); 
+              if (list.size > 20) {
+                list.removeChild(list[list.size - 1]);  
               }
               $("#result").prepend(content);
             }
